# ha

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ha/: __main__.py  pluginloader.py
plugins/remote/: shellshock.py
plugins/serve/: postexploit.py
plugins/shellgen/: awk.py  bash_tcp.py  bash_udp.py  c.py  dart.py  golang.py  groovy.py  java.py  lua.py  nc_busybox.py  nc_openbsd_bash.py  nc_openbsd_sh.py  nc_traditional.py  ncat.py  nodejs.py  ognl.py  openssl.py  perl.py  php.py  powershell.py  python.py  ruby.py  rust.py  socat.py  telnet.py
