[project]
name = "ha"
version = "1.0.0"
description = "HTB Assist, pluggable tool for ctf-style hacking."
requires-python = ">=3.12"
dependencies = [
    "bcrypt==5.0.0",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "colorama==0.4.6",
    "cryptography==48.0.0",
    "idna==3.17",
    "invoke==3.0.3",
    "paramiko==5.0.0",
    "pycparser==3.0",
    "PyNaCl==1.6.2",
    "requests==2.34.2",
    "urllib3==2.7.0",
]

[project.scripts]
ha = "ha.__main__:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"